# Realtime-Analytics-Platform-V2

./: .gitignore  AGENTS.md  README.md  opencode.jsonc  project_system_prompt.xml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.learning/: progress.md
.learning/challenges/: 2026-04-24-rate-limit-graceful-degradation.md
.learning/sessions/: 2026-04-24-RedisStorage-Graceful-Degradation.md  2026-04-26-redis-storage-tests.md  TEMPLATE.md  design-test-rate-limit-redis-2026-04-24.md  design-ttl-test-approach-2026-04-26.md
.opencode/: README.md  phase_state.json
.opencode/agents/: aft-context-sniper.md  architect.md  challenge.md  ci_cd-architect.md  code-mentor.md  code-retriever.md  code-reviewer.md  concept.md  db-expert.md  debug-pathfinder.md  debug.md  env-validator.md  implement.md  mentor.md  observability-auditor.md  principal-mentor.md  qa-test-strategist.md  review.md  schema-sentinel.md  scout.md  security-afficionado.md  session-orchestrator.md  strict-reviewer.md  test.md
.opencode/context/core/: principles.md
.opencode/context/project-intelligence/: stack.md
.opencode/skills/aft-guide/: SKILL.md
.opencode/skills/distributed-systems-map/: SKILL.md
.opencode/skills/learning-principles/: SKILL.md
.opencode/tools/: metric-coverage-scanner.md  phase-tracker.md  schema-diff-tool.md
documentation/Design_Decisions/: Query_Service.md
documentation/Learnings/: Fondation.md  Kafka_Implementation.md  Query_Service_API.md
documentation/phase_3/: Phase3_timescaledb_integration.md  quick_reference.md
infrastructure/postgres/: init.sql
infrastructure/prometheus/: prometheus.yml
migrations/: V1_create_metrics_table.sql  V2_add_tenant_id.sql  V3_hypertables_and_caggs.sql  apply_migrations.py  pyproject.toml
scripts/: backfill_continuous_aggregates.sh  db_connect.sh  kafka_init.sh  post-create.sh
services/ingestion/: main.py  pyproject.toml  run.sh
services/ingestion/app/api/: metrics.py
services/ingestion/app/core/: database.py  kafka_producer.py  logging.py  redis_client.py  settings.py
services/ingestion/tests/: __init__.py
services/query/: main.py  pyproject.toml  run.sh  run_tests.sh
services/query/app/api/: endpoints.py
services/query/app/core/: cache.py  database.py  query_router.py  query_service.py  settings.py
services/query/app/models/: db.py  query.py  query_router.py
services/query/docs/: rate_limiter.md
services/query/rate_limit/: __init__.py  config.py  middleware.py  storage.py
services/query/tests/: test_cache.py  test_calculate_ttl.py  test_database.py  test_get_current_tokens.py  test_models.py  test_query_router.py  test_rate_limit_config.py  test_rate_limit_middleware.py  test_rate_limit_redis.py  test_rate_limit_storage.py  test_reset_bucket.py  test_settings.py
services/shared/: pyproject.toml
services/shared/shared/models/: metric.py
services/shared/shared/schemas/: __init__.py  metric.py
services/worker/: main.py  pyproject.toml  run.sh
services/worker/app/: kafka_consumer.py
services/worker/app/core/: database.py  dlq.py  logging.py  prometheus.py  settings.py
services/worker/tests/: test_consumer.py
tools/load_generator/: generator.py  pyproject.toml  run.sh
