[project]
name = "ingestion"
version = "0.1.0"
description = "HTTP API — validates incoming metrics and produces them to Kafka"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "attrs>=25.4.0",
    "authlib>=1.6.8",
    "cachetools>=7.0.1",
    "confluent-kafka>=2.13.0",
    "fastapi>=0.115.0",
    "fastavro>=1.12.0",
    "prometheus-client>=0.21.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "shared",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=24.0",
    "uvicorn[standard]>=0.30.0",
    "prometheus-fastapi-instrumentator>=6.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.uv.sources]
shared = { path = "../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
