[project]
name = "shared"
version = "0.1.0"
description = "Data contracts shared across all services: ORM models, Pydantic schemas, Avro definitions"
requires-python = ">=3.12"
dependencies = ["sqlalchemy>=2.0", "pydantic>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The importable package is the inner shared/ directory.
# Result: `from shared.models.metric import Metric` works in any service
# that declares `shared = { path = "../shared", editable = true }` in uv.sources.
packages = ["shared"]
